--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:id="@+id/recycle_view"
         android:layout_width="386dp"
         android:layout_height="600dp"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="2dp"
-        tools:ignore="MissingConstraints" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
